@@ -804,47 +804,54 @@ function Set-IisHttpRedirect
     Invoke-AppCmd set config "$SiteName/$Path" /section:httpRedirect /enabled:true /destination:$destination $statusArg $exactDestinationArg $childOnlyArg /commit:apphost
 }
 
-function Set-IisSslFlags
+function Enable-IisSsl
 {
     <#
     .SYNOPSIS
-    Sets how a website or part of a website should handle and use SSL.
+    Turns on and configures SSL for a website or part of a website.
 
     .DESCRIPTION
-    This function allows you to configure the following SSL-related settings:
+    This function enables SSL and optionally the site/directory to: 
 
-     * Requiring SSL (the `RequireSsl` switch)
-     * Ignoring/accepting/requiring client certificates (the `AccepClientCertificates` and `RequireClientCertificates` switches).
+     * Require SSL (the `RequireSsl` switch)
+     * Ignore/accept/require client certificates (the `AcceptClientCertificates` and `RequireClientCertificates` switches).
      * Requiring 128-bit SSL (the `Require128BitSsl` switch).
 
-    By default, this function will make SSL optional, set the ignore client certificates flag, and not require 128-bit SSL.
+    By default, this function will enable SSL, make SSL connections optional, ignores client certificates, and not require 128-bit SSL.
 
     Changing any SSL settings will do you no good if the website doesn't have an SSL binding or doesn't have an SSL certificate.  The configuration will most likely succeed, but won't work in a browser.  So sad.
+    
+    Beginning with IIS 7.5, the `Require128BitSsl` parameter won't actually change the behavior of a website since [there are no longer 128-bit crypto providers](https://forums.iis.net/p/1163908/1947203.aspx) in versions of Windows running IIS 7.5.
 
     .EXAMPLE
-    Set-IisSslFlags -Site Peanuts
+    Enable-IisSsl -Site Peanuts
 
-    Resets the `Peanuts` website's SSL flags to defaults, i.e. makes SSL optional, ignores client certificates, and makes 128-bit SSL optional.
+    Enables SSL on the `Peanuts` website's, making makes SSL connections optional, ignoring client certificates, and making 128-bit SSL optional.
 
     .EXAMPLE
-    Set-IisSslFlags -Site Peanuts -Path Snoopy/DogHouse -RequireSsl
+    Enable-IisSsl -Site Peanuts -Path Snoopy/DogHouse -RequireSsl
     
     Configures the `/Snoopy/DogHouse` directory in the `Peanuts` site to require SSL.  It also turns off any client certificate settings and makes 128-bit SSL optional.
 
     .EXAMPLE
-    Set-IisFlags -Site Peanuts -AcceptClientCertificates
+    Enable-IisSsl -Site Peanuts -AcceptClientCertificates
 
-    Configures the `Peanuts` website to accept client certificates, makes SSL optional, and makes 128-bit SSL optional.
+    Enables SSL on the `Peanuts` website and configures it to accept client certificates, makes SSL optional, and makes 128-bit SSL optional.
 
     .EXAMPLE
-    Set-IisFlags -Site Peanuts -Require128BitSsl
+    Enable-IisSsl -Site Peanuts -RequireSsl -RequireClientCertificates
 
-    Configures the `Peanuts` website to require 128-bit SSL, makes SSL optional, and ignores client certificates.
+    Enables SSL on the `Peanuts` website and configures it to require SSL and client certificates.  You can't require client certificates without also requiring SSL.
+
+    .EXAMPLE
+    Enable-IisSsl -Site Peanuts -Require128BitSsl
+
+    Enables SSL on the `Peanuts` website and require 128-bit SSL.  Also, makes SSL connections optional and ignores client certificates.
 
     .LINK
     Set-IisWebsiteSslCertificate
     #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
+    [CmdletBinding(SupportsShouldProcess=$true,DefaultParameterSetName='IgnoreClientCertificates')]
     param(
         [Parameter(Mandatory=$true)]
         [string]
@@ -855,21 +862,26 @@ function Set-IisSslFlags
         # The path to the folder/virtual directory/application under the website whose SSL flags should be set.
         $Path = '',
         
+        [Parameter(ParameterSetName='IgnoreClientCertificates')]
+        [Parameter(ParameterSetName='AcceptClientCertificates')]
+        [Parameter(Mandatory=$true,ParameterSetName='RequireClientCertificates')]
         [Switch]
         # Should SSL be required?
         $RequireSsl,
         
         [Switch]
+        # Requires 128-bit SSL.
+        $Require128BitSsl,
+        
+        [Parameter(ParameterSetName='AcceptClientCertificates')]
+        [Switch]
         # Should client certificates be accepted?
         $AcceptClientCertificates,
         
+        [Parameter(Mandatory=$true,ParameterSetName='RequireClientCertificates')]
         [Switch]
         # Should client certificates be required?
-        $RequireClientCertificates,
-        
-        [Switch]
-        # Requires 128-bit SSL.
-        $Require128BitSsl
+        $RequireClientCertificates
     )
     
     $flags = @()
@@ -893,7 +905,7 @@ function Set-IisSslFlags
         $flags += 'Ssl128'
     }
     
-    if( $pscmdlet.ShouldProcess( "$SiteName/$Path", "set SSL flags" ) )
+    if( $pscmdlet.ShouldProcess( "$SiteName/$Path", "enable SSL" ) )
     {
         Invoke-AppCmd set config "$SiteName/$Path" "-section:system.webServer/security/access" "/sslFlags:""$($flags -join ',')""" /commit:apphost
     }
